k8s/apps/linkding/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - linkding.k8s.thelabdesk.com
      secretName: wildcard-k8s-tls
  rules:
    - host: linkding.k8s.thelabdesk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
